# datatalent_end-to-end

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  ingest_adzuna_to_gcs.py  load_adzuna_gcs_to_bigquery.py  main.py  pyproject.toml  requirements.txt  test_api_adzuna.py
.github/: README.md
archive/: README.md
archive/dashboard/: README.md  app.py  departements.py
archive/docs/: brief.md  etat_des_lieuxs.md
archive/sql_legacy/: README.md
archive/team_working/: README.md  __init__.py
dashboard/: app.py  departements.py
data-ingestion/geo/: csvToRaw.py  csvTobucket.py  rawToStaging.py
data-ingestion/offres/: franceTravailAuth.py  jsonToRaw.py  rawToBq.py
dbt/: README.md  dbt_project.yml  profiles.yml.example  pyproject.toml
dbt/macros/: communes_raw_cell.sql  departement_depuis_texte.sql  departement_depuis_ville.sql  departement_libelle.sql  normalize_job_title.sql
dbt/models/: schema.yml  sources.yml
dbt/snapshots/: snp_offres_all_sources_scd2.sql
docs/: BIGQUERY_SQL_BATCH_01_REVIEW.md  BIGQUERY_TEAM_VALIDATION.md  BIGQUERY_TEAM_WORKING_PUBLISH.md  CHECKLIST_ALIGNMENT_BRIEF.md  DBT_ROADMAP.md  FRANCE_TRAVAIL_CREDENTIALS.md  GCP_BIGQUERY_A_TO_Z.md  MODELE_JOINTURES.md  RAPPROCHEMENT_OFFRES_SIRENE.md  SETUP_LOCAL.md  queries_exploration_jointures.sql  retour_queries_exploration.md
scripts/: README.md  __init__.py
scripts/cloud/: __init__.py  (+2 more)
sql/: README.md
team_working/: README.md
terraform/: README.md  dev.tfvars.example  main.tf  outputs.tf  terraform.tfstate.1775743998.backup  variables.tf
(+78 files in other folders)
